--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   equatable:
   flutter_bloc:
+  shared_preferences:
+
 
 
   # The following adds the Cupertino Icons font to your application.
